--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -30,6 +30,16 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.r-version }}
+      - name: Setup pandoc
+        uses: r-lib/actions/setup-pandoc@v2
+        with:
+          pandoc-version: '3.1.11'
+      - name: Setup TinyTex
+        uses: r-lib/actions/setup-tinytex@v2
+        run: |
+          tlmgr update --self
+          tlmgr install titlesec
+          tlmgr list --only-installed
       - name: Install dependencies
         run: |
           install.packages(c("remotes", "rcmdcheck"))
