I am Prof. Dr. Long!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(CITMIC)
 export(GetData_CITMIC)
 importFrom(fastmatch,fmatch)
 importFrom(igraph,V)
-importFrom(igraph,graph.adjacency)
-importFrom(igraph,page.rank)
+importFrom(igraph,graph_from_adjacency_matrix)
+importFrom(igraph,page_rank)
 importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
 importFrom(parallel,makeCluster)
